trying to organize

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -218,7 +218,7 @@
         We have two type of types there:
         <ul>
           <li><code>IpPairSummaryRequest</code> — a case class that models our JSON HTTP request's body.</li>
-          <li><code>IpInfo</code> and <code>IpInfoSummary</code> — case classes used as an intermediate form of data that can be converted to response JSON.</li>
+          <li><code>domain.IpInfo</code> and <code>IpInfoSummary</code> — case classes used as an intermediate form of data that can be converted to response JSON.</li>
         </ul>
       </p>
       <h3>Modeling requests</h3>
